[IDE] 프로젝트, 파일 연결, 폴더 경로, 이름 변경 리팩토링까지 완료